bugfix: search selecttype z-index

--- a/component/common/SelectBox.module.scss
+++ b/component/common/SelectBox.module.scss
@@ -25,6 +25,8 @@
   border-radius: 8px;
   padding: 12px 0;
   margin-top: 10px;
+  background-color: #fff;
+
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
   li {
     padding: 8px 12px;
